# rabbit-old

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/shaders/: ambient.frag  blur.frag  brdf.frag  brdf.vert  canvas.frag  canvas.vert  depth.vert  directional_light.frag  fill.frag  fill.vert  forward.frag  forward.vert  forward_copy.frag  forward_nomaps.frag  fxaa.frag  geometry.frag  geometry.vert  geometry_nomaps.frag  irradiance.frag  irradiance.vert  light_culling.comp  motion_blur.frag  outline.frag  point_light.frag  prefilter.frag  prefilter.vert  present.frag  present.vert  quad.vert  shadowmap.frag  shadowmap.vert  sharpen.frag  simple.frag  simple.vert  simple.vert.hlsl  simple.vert.spv  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag
example/: .gitignore  CMakeLists.txt  test.txt
example/data/cubemaps/: black.env  daylight.env  daylight.json  magic_hour.env  space.env
example/data/materials/: base.mat  box.json  coat.json  coat.mat  dirt.mat  grid.mat  head.mat  helmet.json  helmet.mat  red.mat
example/data/models/armchair/: license.txt  scene.gltf
example/data/models/board/: board.gltf
example/data/models/board/board.gltf.data/: Default OBJ.mat
example/data/models/coat/: scene.gltf
example/data/models/coat/scene.gltf.data/: lambert3SG.mat
example/data/models/flight_helmet/FlightHelmet.gltf.data/: GlassPlasticMat.mat  LeatherPartsMat.mat  LensesMat.mat  MetalPartsMat.mat  RubberWoodMat.mat
example/data/prefabs/: armchair.scn  corridor.scn  empty_scene.scn  head.scn  scene.scn  sponza.scn
example/src/: main.cpp
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/data/cubemaps/: magic_hour.json
examples/basic/src/: main.cpp
examples/draw_cube_3d/: CMakeLists.txt
examples/draw_texture/: CMakeLists.txt
examples/draw_texture/src/: main.cpp  main.hpp
examples/gamepad/: CMakeLists.txt
examples/gamepad/src/: main.cpp  main.hpp
examples/hello_world/: CMakeLists.txt
examples/state_manager/: CMakeLists.txt
include/rabbit/: app.hpp  application.hpp  asset_manager.hpp  assets.hpp  base64.hpp  bbox.hpp  blend_state.hpp  bsphere.hpp  bstream.hpp  buffer.hpp  buffer_type.hpp  builder.hpp  builtin_shaders.hpp  camera.hpp  camera_manager.hpp  clock.hpp  color.hpp  compression.hpp  config.hpp  container.hpp  di.hpp  easing.hpp  editor.hpp  entity.hpp  enum.hpp  environment.hpp  exception.hpp  fnv1a.hpp  format.hpp  game.hpp  gamepad.hpp  gamepad_axis.hpp  gamepad_button.hpp  geometry.hpp  glsl.hpp  graphics.hpp  graphics_device.hpp  hierarchy.hpp  identity.hpp  image.hpp  (+64 more)
lib/: CMakeLists.txt
lib/SDL2-2.0.12/: CMakeLists.txt
lib/base64-2.08/: CMakeLists.txt
lib/entt-3.7.1/: CMakeLists.txt
lib/entt-3.8.1/: CMakeLists.txt
lib/glad-0.1.34/: CMakeLists.txt
lib/glad-0.1.34/include/glad/: glad.h
lib/glad-0.1.34/src/: glad.c
lib/glew-2.1.0/: CMakeLists.txt
lib/gsl-3.1.0/: CMakeLists.txt
lib/json-3.9.1/: CMakeLists.txt
lib/magic_enum-0.7.3/: CMakeLists.txt
lib/miniz-2.2.0/: CMakeLists.txt
lib/quickhull/: CMakeLists.txt  QuickHull.hpp
lib/rgbcx-1.12/: CMakeLists.txt
lib/rgbcx-1.12/include/: rgbcx.hpp
lib/rgbcx-1.12/src/: rgbcx.cpp  rgbcx_table4.h
lib/stb/: CMakeLists.txt
lib/tinygltf-2.5.0/: CMakeLists.txt
lib/vma-2.3.0/: CMakeLists.txt
scripts/: bin2h.py
src/: app.cpp  application.cpp  asset_manager.cpp  assets.cpp  base64.cpp  bstream.cpp  buffer.cpp  builder.cpp  camera_manager.cpp  clock.cpp  compression.cpp  config.cpp  editor.cpp  environment.cpp  exception.cpp  game.cpp  gamepad.cpp  glsl.cpp  graphics.cpp  graphics_device.cpp  hierarchy.cpp  image.cpp  input.cpp  keyboard.cpp  loader.cpp  material.cpp  mesh.cpp  mesh_loader.cpp  model.cpp  mouse.cpp  prefab.cpp  rect_pack.cpp  reflection.cpp  renderer.cpp  resource_heap.cpp  s3tc.cpp  settings.cpp  shader.cpp  sprite_batch.cpp  state.cpp  (+11 more)
src/asset/: asset_manager.cpp
src/core/: app.cpp  assets.cpp  bstream.cpp  clock.cpp  compression.cpp  exception.cpp  prefab.cpp  rect_pack.cpp  reflection.cpp  settings.cpp  system.cpp  time.cpp  uuid.cpp  world.cpp
src/dummy/: gamepad_dummy.hpp  keyboard_dummy.cpp  keyboard_dummy.hpp  mouse_dummy.cpp  mouse_dummy.hpp
src/dx11/: buffer_dx11.cpp  buffer_dx11.hpp  graphics_device_dx11.cpp  graphics_device_dx11.hpp  shader_dx11.cpp  shader_dx11.hpp  standard_shaders_dx11.cpp  standard_shaders_dx11.hpp  texture_dx11.cpp  utils_dx11.hpp
src/editor/: editor.cpp  reflection.cpp
src/engine/: application.cpp  builder.cpp  game.cpp  system.cpp
src/entity/: system.cpp
src/glfw/: keyboard_glfw.cpp  keyboard_glfw.hpp  mouse_glfw.hpp  window_glfw.cpp  window_glfw.hpp
src/graphics/: buffer.cpp  environment.cpp  glsl.cpp  graphics.cpp  graphics_device.cpp  image.cpp  material.cpp  mesh.cpp  model.cpp  s3tc.cpp  shader.cpp  shader_data.cpp  texture.cpp  texture_cube.cpp  vertex.cpp  viewport.cpp
src/input/: gamepad.cpp  keyboard.cpp  mouse.cpp
src/interop/: rabbit.cpp
src/loaders/: mesh_loader.cpp  texture_cube_loader.cpp  texture_loader.cpp
src/ogl3/: buffer_ogl3.cpp  buffer_ogl3.hpp  builtin_shaders_ogl3.cpp  graphics_device_ogl3.cpp  graphics_device_ogl3.hpp  mesh_ogl3.cpp  mesh_ogl3.hpp  shader_ogl3.cpp  shader_ogl3.hpp  standard_shaders_ogl3.cpp  texture_cube_ogl3.cpp  texture_cube_ogl3.hpp  texture_ogl3.cpp  texture_ogl3.hpp
src/platform/: input.cpp  window.cpp
src/render/: renderer.cpp
src/sdl2/: gamecontrollerdb_sdl2.hpp  gamepad_sdl2.cpp  gamepad_sdl2.hpp  keyboard_sdl2.cpp  keyboard_sdl2.hpp  mouse_sdl2.cpp  mouse_sdl2.hpp  window_sdl2.cpp  window_sdl2.hpp
src/systems/: hierarchy.cpp  renderer.cpp
src/vulkan/: buffer_vk.cpp  buffer_vk.hpp  buffer_vulkan.cpp  buffer_vulkan.hpp  environment_vulkan.cpp  environment_vulkan.hpp  graphics_device_vk.cpp  graphics_device_vk.hpp  graphics_device_vulkan.cpp  graphics_device_vulkan.hpp  graphics_vulkan.cpp  graphics_vulkan.hpp  material_vulkan.cpp  material_vulkan.hpp  mesh_vulkan.cpp  mesh_vulkan.hpp  resource_heap_vulkan.cpp  resource_heap_vulkan.hpp  shaders_vulkan.cpp  shaders_vulkan.hpp  (+10 more)
test/: CMakeCache.txt
(+288 files in other folders)
